# Eidolon

./: .gitignore  agent-technical-design.md  eslint.config.mjs  index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
docs/: backend-crud-code-generation.md  code-analysis-agent-design.md  rusqlite-to-seaorm-migration.md  zesty-seeking-kettle.md  zesty-seeking-kettle.zh-CN.md
docs/brainstorms/: 2026-04-15-agent-safety-boundaries-requirements.md
docs/plans/: 2026-04-15-001-feat-agent-safety-boundaries-plan.md
docs/superpowers/plans/: 2026-04-14-agent-profile-tauri-storage.md  2026-04-14-agent-workspace-runtime.md  2026-04-14-provider-config-refactor.md
docs/superpowers/specs/: 2026-04-14-agent-profile-tauri-storage-design.md  2026-04-14-agent-workspace-runtime-design.md  (+1 more)
src/: App.vue  index.css  main.ts
src-tauri/: .env.example  Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src-tauri/src/commands/: agent_conversation.rs  agent_profile.rs  app_paths.rs  codegen.rs  conversation.rs  default_model.rs  mcp_service.rs  mod.rs  model_config.rs  test_connection.rs
src-tauri/src/db/: local_store.rs  mod.rs
src-tauri/src/db/mongodb/: mod.rs
src-tauri/src/db/mongodb/repositories/: mod.rs  model_config.rs
src-tauri/src/db/repositories/: agent_conversation.rs  agent_profile.rs  default_model.rs  mcp_service.rs  mod.rs  model_config.rs
src-tauri/src/models/: agent_conversation.rs  agent_profile.rs  default_model.rs  mcp_service.rs  mod.rs  model_config.rs
src-tauri/src/services/: mcp_service.rs  mod.rs  work_directory.rs
src-tauri/src/services/codegen/: go_generator.rs  go_parser.rs  mod.rs  sql_parser.rs  ts_generator.rs  types.rs
src-tauri/templates/: api.ts.tera  basic_search.tsx.tera  form.tsx.tera  helpers.ts.tera  route.tsx.tera
src/components/: custom-error.vue
src/composables/: use-app-paths.ts  use-theme.ts  user-commits.ts
src/config/: provider-registry.ts
src/layout/: index.vue
src/router/: index.ts
src/services/: agent-conversation.ts  agent-profile-storage.ts  agent-profile.ts  app-settings.ts  codegen.ts  conversation.ts  default_model.ts  mcp_service.ts  model_config.ts  project-files.ts  provider_config.ts
src/stores/: agent-workspace.ts  app.ts  provider.ts
src/types/: auto-import-components.d.ts  auto-import.d.ts  default-model.ts  index.ts  mcp-service.ts  provider.ts
src/utils/: crypto.ts  helpers.ts  theme.ts
(+522 files in other folders)
