[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
rig-core = { version = "0.33.0", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs"] }
walkdir = "2"
globset = "0.4"
regex = "1"
sha2 = "0.10"
hex = "0.4"
sea-orm = { version = "1.1.1", default-features = false, features = ["macros", "sqlx-postgres", "runtime-tokio-native-tls", "with-chrono", "debug-print", "mock"] }
sea-orm-migration = { version = "1.1.20", default-features = false, features = ["runtime-tokio-native-tls", "sqlx-postgres", "with-chrono"] }
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
schemars = "1"
tera = "1.20"
mongodb = "3.3"
nanoid = "0.4"
